--- a/research.html
+++ b/research.html
@@ -102,7 +102,7 @@
 
 			<tr><td></td></tr><tr><td></td></tr>
 		
-			<tr><td><h1 align="left"><span style="text-decoration: overline">Publications (104)</span></h1></td></tr>
+			<tr><td><h1 align="left"><span style="text-decoration: overline">Publications (105)</span></h1></td></tr>
 			<tr><td><table align="left" cellpadding="15">
 			
 				<tr><td>
@@ -266,7 +266,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fphys.2024.1344887" target="_blank" rel="noopener noreferrer">10.3389/fphys.2024.1344887</a>
 				</td></tr>
 				<tr><td>
-					<i>Efficient Wi-Fi-Based Human Activity Recognition Using Adaptive Antenna Elimination.</i> Jannat, M.K.A., Islam, M.S., Yang, S-H*, and Liu, H.* (2023). IEEE Access, 11:105440-105454.<br>
+					<i>Efficient Wi-Fi-Based Human Activity Recognition Using Adaptive Antenna Elimination.</i> Jannat, M. K. A., Islam, M. S., Yang, S-H*, and Liu, H.* (2023). IEEE Access, 11:105440-105454.<br>
 					<img src="images/Hot.png" height="15" class = "pop1"> <img src="images/Highly.png" height="15" class = "pop1">
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://scholar.google.com/scholar?q=Efficient+Wi-Fi-Based+Human+Activity+Recognition+Using+Adaptive+Antenna+Elimination" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Efficient-Wi-Fi-Based-Human-Activity-Recognition-Jannat-Islam/02ff217d1dd6316596fc1da4b8f6a107ee5b7f06" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -296,18 +296,7 @@
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
 					<i>Intelligent Human Interaction Recognition with Multi-Modal Feature Extraction and Bidirectional LSTM.</i> Azhar, M. H., Wu, Y., Almujally, N. A., Alharbi S. S., Algarni, A., Jalal, A.*, and Liu, H.* (co-first) (2025). Computer, Materials & Continua. Tech Science Press. ISSN: 1546-2218.<br>
-					<!--
-						<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
-					-->
-				</td></tr>
-				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>SiWformer: Multi-Scale Feature Fusion via Discrete Wavelet Transformand Vision Transformer.</i> Ahmed, M. W., Wu, Y., Almujally, N. A., Alhasson, H. F., Alharbi, S. S., Jalal, A.*, and Liu, H.* (co-first) (2025). Signal, Image and Video Processing. Springer Nature. ISSN: 1863-1711.<br>
-					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					<!--<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
@@ -323,31 +312,44 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
 					-->
 				</td></tr>
+			
 				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>Machine Learning-Assisted Parametric Analysis and Multi-Criteria Optimization of Building Performance: A Case Study on Indoor Environmental Quality and Energy Efficiency.</i> Liu, H.*, Wu, Y., Xue, T., Du, Zhe., Xu, J.*, Jiang, T.* (2026). Energy Conversion and Management, 349:120825. Elsevier. ISSN: 0196-8904.<br>
+					<a href="https://scholar.google.com/scholar?q=Machine+Learning-Assisted+Parametric+Analysis+and+Multi-Criteria+Optimization+of+Building+Performance%3A+A+Case+Study+on+Indoor+Environmental+Quality+and+Energy+Efficiency" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					<!--
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					-->
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/398334663_Machine_learning-assisted_parametric_analysis_and_multi-criteria_optimization_of_building_performance_A_case_study_on_indoor_environmental_quality_and_energy_efficiency" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S0196890425013494" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.enconman.2025.120825" target="_blank" rel="noopener noreferrer">10.1016/j.enconman.2025.120825</a>
+				</td></tr>
+				<tr><td>
+					<i>SiWformer: Multi-Scale Feature Fusion via Discrete Wavelet Transformand Vision Transformer.</i> Ahmed, M. W., Wu, Y., Almujally, N. A., Alhasson, H. F., Alharbi, S. S., Jalal, A.*, and Liu, H.* (co-first) (2025). Signal, Image and Video Processing, 19:1397. Springer Nature. ISSN: 1863-1711.<br>
+					<a href="https://scholar.google.com/scholar?q=SiWformer%3A+Multi-Scale+Feature+Fusion+via+Discrete+Wavelet+Transformand+Vision+Transformer" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/SiWformer%3A-multi-scale-feature-fusion-via-discrete-Ahmed-Wu/92d6ba98bd48b75cfb7e571ef94ca8408e7eeed0" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/398231913_SiWformer_multi-scale_feature_fusion_via_discrete_wavelet_transform_and_vision_transformer_SiWformer_Multi-Scale_Feature_Fusion_via_Discrete_WaveletM_W_Ahmed_et_al" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					<!--
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.springerprofessional.de/lstm-mora-melody-accompaniment-classification-of-midi-tracks/50008576" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
+					-->
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/article/10.1007/s11760-025-04894-y" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1007/s11760-025-04894-y" target="_blank" rel="noopener noreferrer">10.1007/s11760-025-04894-y</a>
+				</td></tr>
+				<tr><td>
 					<i>Novel Quantum-Integrated CNN Model for Improved Human Activity Recognition in Smart Surveillance.</i> Bukht, T. F. N., Wu, Y., Almujally, N. A., AItarbi, S. S., Rahman, H., Jalal, A.*, and Liu, H.* (2025). Computer Modeling in Engineering & Sciences. Tech Science Press. ISSN: 1526-1492.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;
 					-->
-				</td></tr>
-				<tr><td>
-					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Machine Learning-Assisted Parametric Analysis and Multi-Criteria Optimization of Building Performance: A Case Study on Indoor Environmental Quality and Energy Efficiency.</i> Liu, H.*, Wu, Y., Xue, T., Du, Zhe., Xu, J.*, Jiang, T.* (2025). Energy Conversion and Management. Elsevier. ISSN: 0196-8904.<br>
-					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
-					-->
+					<a href="https://www.researchgate.net/publication/398146866_Novel_Quantum-Integrated_CNN_Model_for_Improved_Human_Activity_Recognition_in_Smart_Surveillance" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.techscience.com/CMES/online/detail/25036" target="_blank" rel="noopener noreferrer"><img src="images/Tech_Science_Press.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.32604/cmes.2025.071850" target="_blank" rel="noopener noreferrer">10.32604/cmes.2025.071850</a>
 				</td></tr>
 				<tr><td>
 					<i>Dynamic Graph Neural Networks for UAV-Based Group Activity Recognition in Structured Team Sports.</i> Zahra, I., Wu, Y., Alhasson, H. F., Alharbi, S. S., Aljuaid, H., Jalal, A.*, Liu, H.* (co-first) (2025). Frontiers in Neurorobotics. ISSN: 1662-5218.<br>
 					<a href="https://scholar.google.com/scholar?q=Dynamic+graph+neural+networks+for+UAV-based+group+activity+recognition+in+structured+team+sports" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/395377468_Dynamic_graph_neural_networks_for_UAV-based_group_activity_recognition_in_structured_team_sports" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Dynamic-graph-neural-networks-for-UAV-based-group-Zahra-Wu/ab39587e4ea2d831abb3d923fe59e91f6758c6b7" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Dynamic-graph-neural-networks-for-UAV-based-group-Zahra-Wu/ab39587e4ea2d831abb3d923fe59e91f6758c6b7" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/395377468_Dynamic_graph_neural_networks_for_UAV-based_group_activity_recognition_in_structured_team_sports" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.frontiersin.org/journals/neurorobotics/articles/10.3389/fnbot.2025.1631998" target="_blank" rel="noopener noreferrer"><img src="images/Frontiers.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fnbot.2025.1631998" target="_blank" rel="noopener noreferrer">10.3389/fnbot.2025.1631998</a>
 				</td></tr>
@@ -758,14 +760,14 @@
 			
 				<tr><td>
 					<img src="images/Conference.png" height="15">&nbsp;&nbsp;
-					<img src="images/3.png" height="15"><img src="images/3.png" height="15">&nbsp;&nbsp;|&nbsp;
+					<img src="images/3.png" height="15"><img src="images/4.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Highly.png" height="15" class = "pop1"> Best Paper Award (including "Student-Authored") <img src="images/2.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Candidate.png" height="15" class = "pop1"> Best Paper Finalists <img src="images/2.png" height="15">
 				</td></tr>
 			
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>A Hierarchical Model for Digital Twin Enabled Human-Robot Collaboration in Industrial Assembly.</i> Xia, G., Ghrairi, Z.,  Heuermann, A., Thoben, K-D., Liu, W., Wu, Y., and Liu, H. (2026). International Conference on Digital Twins and Applications (DTA APAC 2026).<br>
+					<i>A Lightweight Deep Learning Approach for Smooth Luffa Leaf Disease Classification Using ROI.</i> Morshed, M.N., Islam, M. M., Himel, G. M. S., Liu, H., Islam, M. S. (2026). In ICCIT 2026 - 28th International Conference on Computer and Information Technology, IEEE.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -776,7 +778,7 @@
 			
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>Anomaly Discrimination Technique Combining Small Sample Reliability Improvement and Combination Strategy Optimization.</i> Liu, H.*, Liu, W., Zhang, S., Wu, Y., Shi, J., Li, H., Dai, Q., Wang, K. (2026). International Conference on Digital Twins and Applications (DTA APAC 2026).<br>
+					<i>A Hierarchical Model for Digital Twin Enabled Human-Robot Collaboration in Industrial Assembly.</i> Xia, G., Ghrairi, Z.,  Heuermann, A., Thoben, K-D., Liu, W., Wu, Y., and Liu, H. (2026). In DTA APAC 2026 - International Conference on Digital Twins and Applications.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -787,7 +789,18 @@
 			
 				<tr><td>
 					<img src="images/Forthcoming.png" height="20" class = "pop1">
-					<i>An Improved Defect Detection System for Substation Equipment Based on Lightweight YOLOv5.</i> Liu, W., Zhang, S., Wu, Y., Shi, J., li, H., Dai, Q., Wang, K., Liu, H.* (2026). International Conference on Digital Twins and Applications (DTA APAC 2026).<br>
+					<i>Anomaly Discrimination Technique Combining Small Sample Reliability Improvement and Combination Strategy Optimization.</i> Liu, H.*, Liu, W., Zhang, S., Wu, Y., Shi, J., Li, H., Dai, Q., Wang, K. (2026). In DTA APAC 2026 - International Conference on Digital Twins and Applications.<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					--!>
+				</td></tr>
+			
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>An Improved Defect Detection System for Substation Equipment Based on Lightweight YOLOv5.</i> Liu, W., Zhang, S., Wu, Y., Shi, J., li, H., Dai, Q., Wang, K., Liu, H.* (2026). In DTA APAC 2026 - International Conference on Digital Twins and Applications.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
@@ -1192,13 +1205,13 @@
 						&#9679; <img src="images/CAMT.png" height="15" class="pop5"> 
 						Verein der CDHAW-Absolventen und Mitglieder der Tongji-Universität, Düsseldorf, Germany 2018: <a href="https://www.cdhawer.com/meeting-news-2018/" target="_blank" rel="noopener noreferrer"><i>Academics and Art</i></a>  <img src="images/CAMTTalk.jpg" height="12" class="pop40"><br>
 						&#9679; <img src="images/NOVA.png" height="15" class="pop5"> 
-						NOVA Universidade de Lisboa, Lisbon, Portugal 2018:v<i>Biosignals and Cognitive Systems</i><br>
+						NOVA Universidade de Lisboa, Lisbon, Portugal 2018: <i>Biosignals and Cognitive Systems</i><br>
 						&#9679; <img src="images/BremenAI.png" height="15" class="pop5">
 						– Bremen.AI Exhibition Symposium 2019: <i>Real-time Recognition and Mixed Reality</i><br>
 						&#9679; <img src="images/KonfuziusFrankfurt.jpg" height="15" class="pop5"> 
 						Lecture Series of the 3<sup>rd</sup> European University Theater Festival, Frankfurt, Germany 2019: <i>From Script to Stage</i><br>
 						&#9679; <a href="https://biostec.scitevents.org/?y=2019" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2019.png" height="12"></a> 
-						– 12<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, Prague, Czech, 2019: <a href="https://biostec.scitevents.org/Tutorials.aspx?y=2019#3" target="_blank" rel="noopener noreferrer"><i>From Offline towards Real-Time</i></a> (Tutorial)<br>
+						– 12<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, Prague, Czech 2019: <a href="https://biostec.scitevents.org/Tutorials.aspx?y=2019#3" target="_blank" rel="noopener noreferrer"><i>From Offline towards Real-Time</i></a> (Tutorial)<br>
 						&#9679; <img src="images/MindDay.png" height="15" class="pop5">
 						– MindDay Symposium on Cognitive Science, Bremen, Germany 2021: <i>Smart Knee Bandage</i><br>
 						&#9679; <a href="https://kd2school.info/" target="_blank" rel="noopener noreferrer"><img src="images/KD2School.png" height="12" class="pop10"></a> 
@@ -1208,7 +1221,7 @@
 						&#9679; <img src="images/OJLAB.png" height="15" class="pop15"> 
 						Zhejiang Lab for Regenerative Medicine, Vision and Brain Health, Wenzhou, China 2024: <i>Multimodal Wearable Biosignal Sensors</i><br>
 						&#9679; <img src="images/BBDC2024.png" height="15" class="pop10">
-						– 9<sup>th</sup> Bremen Big Data Challenge (BBDC 2024) Award Ceremony Summit, Bremen, Germany 2024: <iWhat Else Can Physiological Signals Bring to Smart Life?</i><br>
+						– 9<sup>th</sup> Bremen Big Data Challenge (BBDC 2024) Award Ceremony Summit, Bremen, Germany 2024: <i>What Else Can Physiological Signals Bring to Smart Life?</i><br>
 						&#9679; <img src="images/Huadian2025.png" height="15" class="pop2">
 						– Huadian New Power System Technology Innovation Forum, Nanjing, China 2025: <i>Biosignals for the Safety of Power Operation and Mintenance Personnel</i><br>
 						&#9679; <img src="images/NOVA.png" height="15" class="pop5"> 
