update conference chair

--- a/research.html
+++ b/research.html
@@ -1119,10 +1119,16 @@
 					</td>
 				</tr>
 				<tr>
+					<td align="center">General Chair</td>
+					<td>
+						&#9679; <a href="https://www.icairsa.net/committee-2026/" target="_blank" rel="noopener noreferrer"><img src="images/AIRSA.png" height="15"></a> 2026 – 2<sup>nd</sup> International Conference on Artificial Intelligence and Remote Sensing Applications, Nanning<br>
+					</td>
+				</tr>
+				<tr>
 					<td align="center">General Co-Chair</td>
 					<td>
 						&#9679; <a href="https://www.is-aii.org/committees/" target="_blank" rel="noopener noreferrer"><img src="images/IS-ALL2025.png" height="15"></a> 2025 – International Symposium on Artificial Intelligence Innovations, Guiyang<br>
-						&#9679; <a href="https://www.icairsa.net/?page_id=9629" target="_blank" rel="noopener noreferrer"><img src="images/AIRSA2025.png" height="15"></a> 2025 – International Confer	ence on Artificial Intelligence and Remote Sensing Applications, Changsha<br>
+						&#9679; <a href="https://www.icairsa.net/?page_id=9629" target="_blank" rel="noopener noreferrer"><img src="images/AIRSA.png" height="15"></a> 2025 – International Conference on Artificial Intelligence and Remote Sensing Applications, Changsha<br>
 						&#9679; <a href="https://www.is-aii.org/committees-2026/" target="_blank" rel="noopener noreferrer"><img src="images/IS-ALL2025.png" height="15"></a> 2026 – 2<sup>nd</sup> International Symposium on Artificial Intelligence Innovations, Sanya
 					</td>
 				</tr>
