--- a/researchcn.html
+++ b/researchcn.html
@@ -1121,60 +1121,66 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center">学术会议联合主席（Co-Chair）</td>
+					<td align="center">国际学术会议<br>主席<br>General Chair</td>
+					<td>
+						&#9679; <a href="https://www.icairsa.net/committee-2026/" target="_blank" rel="noopener noreferrer"><img src="images/AIRSA.png" height="15"></a> 2026 – 2<sup>nd</sup> International Conference on Artificial Intelligence and Remote Sensing Applications, 中国南宁<br>
+					</td>
+				</tr>
+				<tr>
+					<td align="center">国际学术会议<br>联合主席<br>General Co-Chair</td>
 					<td>
 						&#9679; <a href="https://www.is-aii.org/committees/" target="_blank" rel="noopener noreferrer"><img src="images/IS-ALL2025.png" height="15"></a> 2025 – International Symposium on Artificial Intelligence Innovations, 中国贵阳<br>
-						&#9679; <a href="https://www.icairsa.net/?page_id=9629" target="_blank" rel="noopener noreferrer"><img src="images/AIRSA2025.png" height="15"></a> 2025 – International Confer	ence on Artificial Intelligence and Remote Sensing Applications, 中国长沙<br>
+						&#9679; <a href="https://www.icairsa.net/?page_id=9629" target="_blank" rel="noopener noreferrer"><img src="images/AIRSA.png" height="15"></a> 2025 – International Conference on Artificial Intelligence and Remote Sensing Applications, 中国长沙<br>
 						&#9679; <a href="https://www.is-aii.org/committees-2026/" target="_blank" rel="noopener noreferrer"><img src="images/IS-ALL2025.png" height="15"></a> 2026 – 2<sup>nd</sup> International Symposium on Artificial Intelligence Innovations, 中国三亚
 					</td>
 				</tr>
 				<tr>
-					<td align="center">学术会议执行主席（EC）</td>
+					<td align="center">国际学术会议<br>执行主席<br>Executive Chair</td>
 					<td>
 						&#9679; <a href="https://imic.nuist.edu.cn/xsjl/aim2025.htm" target="_blank" rel="noopener noreferrer">AIM</a> 2025 – International Symposium on AI in Medicine, 中国南京
 					</td>
 				</tr>
 				<tr>
-					<td align="center">学术会议技术委员会主席 (TPC)</td>
+					<td align="center">国际学术会议<br>技术委员会主席<br>Technical Program Chair</td>
 					<td>
 						&#9679; <a href="https://www.artinhci.com/Committee.aspx" target="_blank" rel="noopener noreferrer"><img src="images/ArtInHCI.png" height="15" class="pop5"></a> 2025 – 3<sup>rd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction, 中国南宁
 					</td>
 				</tr>
 				<tr>
-					<td align="center">学术会议程序委员会联合主席（Co-PC）</td>
+					<td align="center">国际学术会议<br>程序委员会联合主席<br>Program Co-Chair</td>
 					<td>
 						&#9679; <a href="https://biosignals.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2024.png" height="12"></a> – 17<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in <a href="https://biostec.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2024.png" height="12"></a>), 意大利罗马<br>
 						&#9679; <a href="https://biosignals.scitevents.org/?y=2026" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2026.png" height="12"></a> – 19<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in <a href="https://biostec.scitevents.org/?y=2026" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2026.png" height="12"></a>), 西班牙马贝拉
 					</td>
 				</tr>
 				<tr>
-					<td align="center">学术会议技术委员会联合主席（Co-TPC）</td>
+					<td align="center">国际学术会议<br>技术委员会联合主席<br>Technical Program<br>Co-Chair</td>
 					<td>
 						&#9679; <img src="images/ArtInHCI.png" height="15" class="pop5"> 2024 – 2<sup>nd</sup> International Conference on Artificial Intelligence and Human-Computer Interaction, 中国昆明
 					</td>
 				</tr>
 				<tr>
-					<td align="center">学术会议区域主席（AC）</td>
+					<td align="center">国际学术会议<br>区域主席<br>Area Chair</td>
 					<td>
 						&#9679; <a href="https://e-nns.org/icann2024/organization/program-committee/" target="_blank" rel="noopener noreferrer"><img src="images/ICANN2024.png" height="15" class="pop5"></a> - 33<sup>rd</sup> International Conference on Artificial Neural Networks, 瑞士卢加诺<br>
 						&#9679; <a href="https://ceii.asia/2024/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/CEII2024.png" height="15" class="pop5"></a> – 7<sup>th</sup> Asia Conference on Cognitive Engineering and Intelligent Interaction, 新加坡
 					</td>
 				</tr>
 				<tr>
-					<td align="center">学术会议宣传主席（Publicity Chair）</td>
+					<td align="center">国际学术会议<br>宣传主席<br>Publicity Chair</td>
 					<td>
 						&#9679; <a href="https://autocare.ai/abc2025" target="_blank" rel="noopener noreferrer"><img src="images/ABC2025.png" height="15" class="pop5"></a> – 7<sup>th</sup>  International Conference on Activity and Behavior Computing, 阿联酋阿布扎比<br>
 						&#9679; <a href="https://www.icaigc.org/committee.html" target="_blank" rel="noopener noreferrer"><img src="images/AIGC2024.png" height="15" class="pop5"></a> – 2<sup>nd</sup>  International Conference on AI-generated Content, 中国北京<br>
 					</td>
 				</tr>
 				<tr>
-					<td align="center">博士生论坛联合主席（Doctoral Consortium Co-Chair）</td>
+					<td align="center">国际学术会议<br>博士生论坛联合主席<br>Doctoral Consortium<br>Co-Chair</td>
 					<td>
 						&#9679; <a href="https://biostec.scitevents.org/DoctoralConsortium.aspx/?y=2025" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2025.png" height="12"></a> – 18<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, 葡萄牙波尔图
 					</td>
 				</tr>
 				<tr>
-					<td align="center">学术会议分会场主席（Session Chair）</td>
+					<td align="center">国际学术会议<br>分会场主席<br>Session Chair</td>
 					<td>
 						&#9679; <a href="https://healthinf.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/HEALTHINF22.png" height="12"></a> – 15<sup>th</sup> International Conference on Health Informatics, Vienna, Austria<br>
 						&#9679; <a href="https://sigmap.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/SIGMAP22.png" height="12"></a> – 19<sup>th</sup> International Conference on Signal Processing and Multimedia Applications, Lisbon, Portugal<br>
@@ -1192,14 +1198,14 @@
 					</td>
 				</tr>
 				<tr>
-					<td align="center">国际会议主旨报告</td>
+					<td align="center">国际学术会议<br>主旨报告</td>
 					<td>
 						&#9679; <a href="http://www.iccmid.org/speakers/" target="_blank" rel="noopener noreferrer"><img src="images/CMID.png" height="15" class="pop5"></a> – 第4届临床医学与智能设备国际研讨会，德国海德堡，2025：<i>Wearable Medical AI</i><br>
 						&#9679; <a href="https://www.artinhci.com/KeynoteSpeakers.aspx" target="_blank" rel="noopener noreferrer"><img src="images/ArtInHCI.png" height="15" class="pop5"></a> 2025 – 第3届人工智能和人机界面国际会议，中国南宁，2025<i>Human-Triggered Machine Learning (HTML)</i><br>
 						&#9679; <img src="images/CAFOTF2025.png" height="15" class="pop5"> 2025 – 第3届民航飞行与运行技术论坛，中国成都，2025: <i>人因素和民航安全</i>
 				</tr>
 				<tr>
-					<td align="center">会议、论坛、研讨会邀请报告和讲座</td>
+					<td align="center">会议、论坛、研讨会<br>邀请报告和讲座</td>
 					<td>
 						&#9679; <img src="images/CAMT.png" height="15" class="pop5"> 同济大学中德工程学院，德国杜塞尔多夫，2018：<i>学术与艺术</i>  <img src="images/CAMTTalk.jpg" height="12" class="pop40"><br>
 						&#9679; <img src="images/NOVA.png" height="15" class="pop5"> 新里斯本大学，葡萄牙里斯本，2018：<i>Biosignals and Cognitive Systems</i><br>
@@ -1215,7 +1221,7 @@
 						&#9679; <img src="images/NOVA.png" height="15" class="pop5"> 新里斯本大学，葡萄牙里斯本，2025：<i>HTML：Human-Triggered Machine Learning</i>
 				</tr>
 				<tr>
-				<td align="center">开源代码库、大数据和在线教程贡献者</td>
+				<td align="center">开源代码库、大数据<br>和在线教程贡献者</td>
 					<td>
 						&#9679; Biosignals Notebooks <img src="images/biosignalsnotebooks.png" height="12" class="pop10">：传感器信号处理和人工智能线上教程和代码集<br>
 						&#9679; <a href="https://tsfel.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">TSFEL</a>
