--- a/research.html
+++ b/research.html
@@ -316,9 +316,7 @@
 				<tr><td>
 					<i>Machine Learning-Assisted Parametric Analysis and Multi-Criteria Optimization of Building Performance: A Case Study on Indoor Environmental Quality and Energy Efficiency.</i> Liu, H.*, Wu, Y., Xue, T., Du, Zhe., Xu, J.*, Jiang, T.* (2026). Energy Conversion and Management, 349:120825. Elsevier. ISSN: 0196-8904.<br>
 					<a href="https://scholar.google.com/scholar?q=Machine+Learning-Assisted+Parametric+Analysis+and+Multi-Criteria+Optimization+of+Building+Performance%3A+A+Case+Study+on+Indoor+Environmental+Quality+and+Energy+Efficiency" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					<!--
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					-->
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Machine-learning-assisted-parametric-analysis-and-A-Liu-Wu/5c1d49d1bdb94d06d36f9adc17c903d92f79b035" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/398334663_Machine_learning-assisted_parametric_analysis_and_multi-criteria_optimization_of_building_performance_A_case_study_on_indoor_environmental_quality_and_energy_efficiency" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.sciencedirect.com/science/article/pii/S0196890425013494" target="_blank" rel="noopener noreferrer"><img src="images/Elsevier.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.enconman.2025.120825" target="_blank" rel="noopener noreferrer">10.1016/j.enconman.2025.120825</a>
@@ -338,10 +336,10 @@
 					<i>Novel Quantum-Integrated CNN Model for Improved Human Activity Recognition in Smart Surveillance.</i> Bukht, T. F. N., Wu, Y., Almujally, N. A., AItarbi, S. S., Rahman, H., Jalal, A.*, and Liu, H.* (2025). Computer Modeling in Engineering & Sciences. Tech Science Press. ISSN: 1526-1492.<br>
 					<!--
 					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;
 					-->
-					<a href="https://www.researchgate.net/publication/398146866_Novel_Quantum-Integrated_CNN_Model_for_Improved_Human_Activity_Recognition_in_Smart_Surveillance" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					<a href="https://www.semanticscholar.org/paper/Novel-Quantum-Integrated-CNN-Model-for-Improved-in-Bukht-Wu/07f862583679932990f0036bf07f066138a221b3" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/398146866_Novel_Quantum-Integrated_CNN_Model_for_Improved_Human_Activity_Recognition_in_Smart_Surveillance" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.techscience.com/CMES/online/detail/25036" target="_blank" rel="noopener noreferrer"><img src="images/Tech_Science_Press.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.32604/cmes.2025.071850" target="_blank" rel="noopener noreferrer">10.32604/cmes.2025.071850</a>
 				</td></tr>
