--- a/researchcn.html
+++ b/researchcn.html
@@ -104,7 +104,7 @@
 
 			<tr><td></td></tr><tr><td></td></tr>
 		
-			<tr><td><h1 align="left"><span style="text-decoration: overline">论文发表（105）</span></h1> SCI总影响因子=258.9，其中一作/通讯总影响因子=224.1</td></tr>
+			<tr><td><h1 align="left"><span style="text-decoration: overline">论文发表（106）</span></h1> SCI总影响因子=258.9，其中一作/通讯总影响因子=224.1</td></tr>
 			<tr><td><table align="left" cellpadding="15">
 			
 				<tr><td>
@@ -115,6 +115,7 @@
 					<i>Biomedical Engineering Systems and Technologies.</i>  Guarino, M. P., Hotta, K., Yousef, M., Liu, H., Saggio, G., Fred, A., and Gamboa, H. (eds., 2025). Springer Nature Switzerland.<br>
 					<a href="https://books.google.de/books?id=7HmCEQAAQBAJ" target="_blank" rel="noopener noreferrer"><img src="images/GoogleBooks.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.amazon.com/Biomedical-Engineering-Systems-Technologies-International/dp/3031968980" target="_blank" rel="noopener noreferrer"><img src="images/Amazon.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Biomedical-Engineering-Systems-and-Technologies/5a542822ea6a648e66c3d9a28e9a0ae64ae8ef0a" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/395173234_Biomedical_Engineering_Systems_and_Technologies_17th_International_Joint_Conference_BIOSTEC_2024_Rome_Italy_February_21-23_2024_Revised_Selected_Papers" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.springerprofessional.de/biomedical-engineering-systems-and-technologies/51405216" target="_blank" rel="noopener noreferrer"><img src="images/Springer_Professional.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://link.springer.com/book/10.1007/978-3-031-96899-0" target="_blank" rel="noopener noreferrer"><img src="images/SpringerLink.png" height="15"></a>
@@ -136,7 +137,6 @@
 				<tr><td>
 					<i>Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies – (Volume 1).</i> Guarino, M. P., Hotta, K., Yousef, M., Liu, H., Saggio, G., Fred, A., and Gamboa, H. (eds., 2024). INSTICC.<br>
 					<a href="https://www.semanticscholar.org/paper/Proceedings-of-the-17th-International-Joint-on-and-Liu-Liu/3e51838ee78dad4fec3b404223b02913a9f3adc5" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Proceedings-of-the-17th-International-Joint-on-and-Liu-Liu/3e51838ee78dad4fec3b404223b02913a9f3adc5" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/378935961_Proceedings_of_the_17th_International_Joint_Conference_on_Biomedical_Engineering_Systems_and_Technologies_-_Volume_1" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://doi.org/10.5220/0000184700003657" target="_blank" rel="noopener noreferrer"><img src="images/SciTePress.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0000184700003657" target="_blank" rel="noopener noreferrer">10.5220/0000184700003657</a>
@@ -217,7 +217,7 @@
 			
 				<tr><td>
 					<img src="images/Journal.png" height="15">&nbsp;&nbsp;
-					<img src="images/6.png" height="15"><img src="images/3.png" height="15">&nbsp;&nbsp;|&nbsp;
+					<img src="images/6.png" height="15"><img src="images/2.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Hot_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 0.1% on <img src="images/WoS.png" height="15" class = "pop1">)&nbsp;&nbsp;|&nbsp;
 					<img src="images/Highly_Cited_Paper.png" height="15" class = "pop1"> <img src="images/8.png" height="15"> (top 1%)
 				</td></tr>
@@ -336,11 +336,8 @@
 				</td></tr>
 				<tr><td>
 					<i>Novel Quantum-Integrated CNN Model for Improved Human Activity Recognition in Smart Surveillance.</i> Bukht, T. F. N., Wu, Y., Almujally, N. A., AItarbi, S. S., Rahman, H., Jalal, A.*, and Liu, H.* (2025). Computer Modeling in Engineering & Sciences. Tech Science Press. ISSN: 1526-1492.<br>
-					<!--
-					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
-					&nbsp;&nbsp;&nbsp;&nbsp;
-					-->
-					<a href="https://www.semanticscholar.org/paper/Novel-Quantum-Integrated-CNN-Model-for-Improved-in-Bukht-Wu/07f862583679932990f0036bf07f066138a221b3" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					<a href="https://scholar.google.com/scholar?q=Novel+Quantum-Integrated+CNN+Model+for+Improved+Human+Activity+Recognition+in+Smart+Surveillance" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Novel-Quantum-Integrated-CNN-Model-for-Improved-in-Bukht-Wu/07f862583679932990f0036bf07f066138a221b3" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/398146866_Novel_Quantum-Integrated_CNN_Model_for_Improved_Human_Activity_Recognition_in_Smart_Surveillance" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.techscience.com/CMES/online/detail/25036" target="_blank" rel="noopener noreferrer"><img src="images/Tech_Science_Press.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.32604/cmes.2025.071850" target="_blank" rel="noopener noreferrer">10.32604/cmes.2025.071850</a>
@@ -760,9 +757,20 @@
 			
 				<tr><td>
 					<img src="images/Conference.png" height="15">&nbsp;&nbsp;
-					<img src="images/3.png" height="15"><img src="images/4.png" height="15">&nbsp;&nbsp;|&nbsp;
+					<img src="images/3.png" height="15"><img src="images/5.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Highly.png" height="15" class = "pop1"> Best Paper Award (including "Student-Authored") <img src="images/2.png" height="15">&nbsp;&nbsp;|&nbsp;
 					<img src="images/Candidate.png" height="15" class = "pop1"> Best Paper Finalists <img src="images/2.png" height="15">
+				</td></tr>
+			
+				<tr><td>
+					<img src="images/Forthcoming.png" height="20" class = "pop1">
+					<i>Influence of Multi-Wavelength Sensor Array Design on Signal Stability and Application in Blood Pressure Detection.</i> Zhou, C., Yu, L., Zhou, R, Hu, Y, Wang, H., Liu, H., Ye, X. (2026) In BIOSTEC 2026 - Proceedings of the 19th International Joint Conference on Biomedical Engineering Systems and Technologies - Volume 4: BIOSIGNALS. INSTICC, SciTePress.<br>
+					<!--
+					<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/" target="_blank" rel="noopener noreferrer"></a>
+					--!>
 				</td></tr>
 			
 				<tr><td>
